--- a/config/variables.tex
+++ b/config/variables.tex
@@ -6,11 +6,11 @@
 % \planthesisfalse % El documento cambia a modo Tesis
 
 % Información del proyecto
-\newcommand{\VarTituloTesis}{Aquí va el Título de la tesis}
-\newcommand{\VarAutorUno}{Nombres y Apellidos 1}
-\newcommand{\VarAutorDos}{Nombres y Apellidos 2} % Dejar en blanco para un solo autor
+\newcommand{\VarTituloTesis}{Diseño e Implementación de estación terrena automatizada de bajo coste para recepción de imágenes meteorológicas de satélites NOAA en Arequipa}
+\newcommand{\VarAutorUno}{Gutierrez Flores, Miguel Abiel}
+\newcommand{\VarAutorDos}{} % Dejar en blanco para un solo autor
 \newcommand{\VarGrado}{Ingeniero en Telecomunicaciones}
-\newcommand{\VarAsesor}{Dr. Nombres y Apellidos}
+\newcommand{\VarAsesor}{Dr. Jimenez Montes de Oca, Romel Luis}
 \newcommand{\VarInstitucion}{UNIVERSIDAD NACIONAL DE SAN AGUSTÍN DE AREQUIPA}
 \newcommand{\VarFacultad}{FACULTAD DE INGENIERÍA DE PRODUCCIÓN Y SERVICIOS}
 \newcommand{\VarEscuela}{ESCUELA PROFESIONAL DE INGENIERÍA EN TELECOMUNICACIONES}
